# Silk.NET

./: $NewRepo.sln  .editorconfig  .gitattributes  .gitignore  .gitmodules  .nuke  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Directory.Build.props  Directory.Build.targets  Directory.Packages.props  LICENSE  LICENSE.md  README.md  Readme.md  Silk.NET.Maths.sln  Silk.NET.gen.sln  Silk.NET.sln  Silk.NET.sln.DotSettings  SilkExtensions.sln  SilkX.sln  THIRD_PARTIES.md  azure-pipelines-cd.yml  azure-pipelines.yml  build.bat  build.cmd  build.ps1  build.sh  clean.bat  clean.sh  d3d11.json  egl.json  generator.bat  generator.json  generator.ps1  generator.sh  global.json  nuget.config  pack.bat  (+8 more)
.config/: dotnet-tools.json
.github/: FUNDING.yml  SUPPORT.md  codecov.yml  dependabot.yml  labeler.yml  pull_request_template.md
.nuke/: build.schema.json  parameters.json
.silktouch/: 0afb5dc84012c2fa.stout  0f08e86a79aa927f.stout  159d518e3b94efca.stout  1ce66f3f47b7ebfb.stout  2b50d7d447412fec.stout  33127b0b72527d00.stout  34f29eca37f140e7.stout  3c5a991b021f889d.stout  6c178199c2faa4b0.stout  72b687a9cceac28c.stout  772c7817bbdb99d6.stout  79cd69f217a063a4.stout  82fde6eb3b68e085.stout  91c9aa14a031651f.stout  9e67eb90438793e2.stout  a1b4e159b3dbe7f3.stout  a8a82533527277ff.stout  ac001027d53000e0.stout  baee07d7b1f57893.stout  bdd42329798b2360.stout  c8c046b328b09d23.stout  ce565fcfc6aa78c8.stout  ce8a69a66cd3bd3f.stout  d48a9fc4a502f7c6.stout  eca38d7e9011bdcc.stout  f00dcb0ceb62e791.stout  (+3 more)
src/Lab/Experiments/SumC/: CMakeLists.txt  library.c  library.h
(+81484 files in other folders)
